# RNP

./: ip addressen.txt
Praktikum2/: ip addressen.txt
Praktikum3/Abgabe/: ClientServerKommunikation.pcapng
Praktikum3/Abgabe/Code/: start.sh  start_ubuntu.sh
Praktikum3/Abgabe/Code/src/: CMakeLists.txt  client.c  cmdHandlerClient.c  cmdHandlerClient.h  cmdHandlerServer.c  myHelperFunctions.c
Praktikum3/Abgabe/Code/src/storageClient/: peter  test.txt
Praktikum3/Abgabe/Code/src/storageServer/: wiki.txt
Praktikum3/rn-exercise3-template/template/: start.sh  start_ubuntu.sh
Praktikum3/rn-exercise3-template/template/src/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  client  client.c  client_orriginv2.c  cmake_install.cmake  cmdHandlerClient.c  cmdHandlerClient.h  cmdHandlerServer.c  cmdHandlerServer.h  myHelperFunctions.c  myHelperFunctions.h  server  server copy.c  server.c  server1.c  server_origin.c  server_originv2.c  test1.txt  wiki.txt
Praktikum3/rn-exercise3-template/template/src/storageClient/: gut  peter  sehrgut  test.txt  test2  wiki.txt
Praktikum3/rn-exercise3-template/template/src/storageServer/: gut  output.txt  peter  sehrgut  test.txt  test2  wiki.txt
Praktikum4/: doku.ipynb
Praktikum4/.ipynb_checkpoints/: doku-checkpoint.ipynb
